--- a/FilmsCatalog/FilmsCatalog.csproj
+++ b/FilmsCatalog/FilmsCatalog.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\FilmsDb\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
